--- a/M2_Capstone_EDA_Paisabazaar_Banking_Fraud_Analysis.ipynb
+++ b/M2_Capstone_EDA_Paisabazaar_Banking_Fraud_Analysis.ipynb
@@ -16,21 +16,28 @@
         "id": "beRrZCGUAJYm"
       },
       "source": [
+        "<img src=\"https://blogassets.airtel.in/wp-content/uploads/2024/01/check-credit-score-by-pan.png\" alt=\"Check Credit Score by PAN\" width=\"1000\">\n",
+        "\n",
+        "\n",
         "##### **Project Type**    - EDA\n",
-        "##### **Contribution**    - Individual\n"
+        "##### **Contribution**    - Individual\n",
+        "##### **Team Member**    - Harsh Kumar"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Project Summary -**"
-      ],
       "metadata": {
         "id": "qFJb1CYe3VMB"
-      }
+      },
+      "source": [
+        "# **Project Summary -**"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9ucdruHY3Wyx"
+      },
       "source": [
         "Data Preprocessing :\n",
         "\n",
@@ -54,28 +61,25 @@
         "Visualisation :\n",
         "\n",
         "- Histograms, boxplots, countplots, scatterplots, and heatmaps for pattern detection and insights"
-      ],
-      "metadata": {
-        "id": "9ucdruHY3Wyx"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **GitHub Link -**"
-      ],
       "metadata": {
         "id": "F4i6mnnO3F0h"
-      }
+      },
+      "source": [
+        "# **GitHub Link -**"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "abcsdsgshjsksksks"
-      ],
       "metadata": {
         "id": "p1QL5r5k3IB3"
-      }
+      },
+      "source": [
+        "abcsdsgshjsksksks"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1594,12 +1598,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Chart - 7 **Income impact on it's Credit Score**\n"
-      ],
       "metadata": {
         "id": "uwPu-dvJ7rXD"
-      }
+      },
+      "source": [
+        "#### Chart - 7 **Income impact on it's Credit Score**\n"
+      ]
     },
     {
       "cell_type": "code",
