added github link

--- a/M2_Capstone_EDA_Paisabazaar_Banking_Fraud_Analysis.ipynb
+++ b/M2_Capstone_EDA_Paisabazaar_Banking_Fraud_Analysis.ipynb
@@ -46,7 +46,7 @@
         "- Checking dataset shape, info & duplicates\n",
         "- Handling missing values\n",
         "- Removing irrelevant columns\n",
-        "- Removing outliers (Annual_Income – IQR method)\n",
+        "- Removing outliers\n",
         "- Data type conversion\n",
         "- Feature engineering: Debt-to-Income Ratio, Income Bracket\n",
         "\n",
@@ -78,7 +78,7 @@
         "id": "p1QL5r5k3IB3"
       },
       "source": [
-        "abcsdsgshjsksksks"
+        "https://github.com/harshk707070/Paisabazaar-EDA"
       ]
     },
     {
